tests/fixtures/type_checker/error/bool.galaxy
bool gblobal;

bool retbtrue()
{
    return true;
}

bool retbfalse()
{
    return false;
}

void test_bool()
{
    bool v;
    v = retbtrue();
    v = gblobal;
    v = !gblobal;
    v = 1 > 2;
    v = false || true;
    v = false && true || gblobal && !(null == null);
    v = false && 1;
    // ^ERR can't implicitly cast 1 to bool
    v = gblobal != true;
}
